objects/tz__lt_app_settings__c.object
<CustomObject>
    <fields>
        <fullName>tz__Abbreviation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this option if you want to show time zone abbreviation next to the local time (PST, EST etc).</description>
        <inlineHelpText>Enable this option if you want to show time zone abbreviation next to the local time (PST, EST etc).</inlineHelpText>
        <label>Time Zone Short Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Account_Fields__c</fullName>
        <description>Comma separated account fields (Country, State, City, Phone, PostalCode).</description>
        <inlineHelpText>Comma separated account fields (Country, State, City, Phone, PostalCode).</inlineHelpText>
        <label>Account Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Account_Filter__c</fullName>
        <label>Account Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tz__Account_Triggers__c</fullName>
        <defaultValue>"true,false,false"</defaultValue>
        <description>Comma separated values for Account Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</description>
        <inlineHelpText>Comma separated values for Account Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</inlineHelpText>
        <label>Account Triggers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Activity_Triggers__c</fullName>
        <defaultValue>"true,false,false"</defaultValue>
        <description>Comma separated values for Activity Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</description>
        <inlineHelpText>Comma separated values for Activity Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</inlineHelpText>
        <label>Activity Triggers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Africa_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>Africa DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Asia_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>Asia DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Asia_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asia - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>Asia DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Batch_Size__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of records to be processed by a batch job.</description>
        <inlineHelpText>Number of records to be processed by a batch job.</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__Case_Triggers__c</fullName>
        <defaultValue>"true,false,false"</defaultValue>
        <description>Comma separated values for Case Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</description>
        <inlineHelpText>Comma separated values for Case Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</inlineHelpText>
        <label>Case Triggers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Contact_Fields__c</fullName>
        <description>Comma separated contact fields (Country, State, City, Phone, PostalCode).</description>
        <inlineHelpText>Comma separated contact fields (Country, State, City, Phone, PostalCode).</inlineHelpText>
        <label>Contact Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Contact_Filter__c</fullName>
        <label>Contact Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tz__Contact_Triggers__c</fullName>
        <defaultValue>"true,false,false"</defaultValue>
        <description>Comma separated values for Contact Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</description>
        <inlineHelpText>Comma separated values for Contact Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</inlineHelpText>
        <label>Contact Triggers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Default_Country__c</fullName>
        <description>The App will utilize this country for all records where the country/phone information is missing.</description>
        <inlineHelpText>The App will utilize this country for all records where the country/phone information is missing.</inlineHelpText>
        <label>Default Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Default_Phone_Code__c</fullName>
        <description>The App will utilize this phone code for all phone numbers where the country phone code (+1, +44 etc..) is missing.</description>
        <inlineHelpText>The App will utilize this phone code for all phone numbers where the country phone code (+1, +44 etc..) is missing.</inlineHelpText>
        <label>Default Country Phone Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Enable_Batch_Updates__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the checkbox if you want the App to automatically update records when DST settings change for a region (Recommended).

If disabled, you are responsible to manually update records whenever a region goes in/out of DST.</description>
        <inlineHelpText>Enable the checkbox if you want the App to automatically update records when DST settings change for a region (Recommended).

If disabled, you are responsible to manually update records whenever a region goes in/out of DST.</inlineHelpText>
        <label>Enable DST Batch Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Europe_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>Europe DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Europe_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Europe - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>Europe DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Frequency__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Input a value to indicate how frequently you want to update the time shown by the Local Time button.

Negative values are not valid.

Example: 10. This means the time value is updated every 10 seconds. If the current time is 10:20:10 AM, then the next value shown is 10:20:20 AM, and then 10:20:30 AM after 10 seconds and so on.</description>
        <inlineHelpText>This value indicates how frequently you want to update the time shown by the Local Time button.
A lower value will update the time value more frequently but might consume more browser resources than a higher frequency value.</inlineHelpText>
        <label>Frequency (Seconds)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__Gadget_Time_Format__c</fullName>
        <description>Time display format for the Local Time gadget, Find Local Time button, and Lightning Component.</description>
        <inlineHelpText>Time display format for the Local Time gadget, Find Local Time button, and Lightning Component.</inlineHelpText>
        <label>Local Time Gadget Time Format</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Israel_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>Israel DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Israel_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Israel - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>Israel DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Job_Start_Time__c</fullName>
        <defaultValue>"03"</defaultValue>
        <label>Job Start Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Lead_Fields__c</fullName>
        <description>Comma separated lead fields (Country, State, City, Phone, PostalCode).</description>
        <inlineHelpText>Comma separated lead fields (Country, State, City, Phone, PostalCode).</inlineHelpText>
        <label>Lead Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Lead_Filter__c</fullName>
        <label>Lead Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tz__Lead_Triggers__c</fullName>
        <defaultValue>"true,false,false"</defaultValue>
        <description>Comma separated values for Lead Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</description>
        <inlineHelpText>Comma separated values for Lead Trigger (Normal,Batch job,Scheduled job).
Example: true,false,false</inlineHelpText>
        <label>Lead Triggers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Manual_Batch_Size__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of records to be processed by the manual mass update batch job.</description>
        <inlineHelpText>Number of records to be processed by the manual mass update batch job.</inlineHelpText>
        <label>Manual Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__NA_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>NA DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__NA_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>North America - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>NA DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__NZ_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>NZ DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__NZ_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New Zealand - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>NZ DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Oceania_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>Oceania DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Oceania_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Oceania - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>OCEANIA DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Person_Account_Fields__c</fullName>
        <description>Comma separated person account fields (Country, State, City, Phone).</description>
        <inlineHelpText>Comma separated person account fields (Country, State, City, Phone).</inlineHelpText>
        <label>Person Account Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Phone_First__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default the App checks first the address fields and then the phone number to compute Local Time.

Enable the checkbox to reverse this order.</description>
        <inlineHelpText>By default the App checks first the address fields and then the phone number to compute Local Time.

Enable the checkbox to reverse this order.</inlineHelpText>
        <label>Phone First?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__SA_DST_Start_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</description>
        <inlineHelpText>System field - Set to true when DST is started. Set to false when DST is stopped. Batch job runs when it is set to true the first time.</inlineHelpText>
        <label>SA DST Start Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__SA_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>South America - Enable this option if you want to start using daylight saving time. Normally this value is set twice an year.</description>
        <inlineHelpText>DST is the practice of temporarily advancing clocks during the summer time so that afternoons have more daylight and mornings have less. Typically clocks are adjusted forward one hour near the start of spring and are adjusted backward in autumn.</inlineHelpText>
        <label>SA DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Update_DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Update DST Settings future method is running or not.</description>
        <inlineHelpText>Indicates if the Update DST Settings future method is running or not.</inlineHelpText>
        <label>Update DST</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Local Time App. It is recommended to change these settings from the Local Time Config tab instead of directly manipulating them here.</description>
    <label>Local Time App Settings</label>
</CustomObject>